Updated Modified Contents

--- a/src/lab/images/Tensionms/css/ttms.css
+++ b/src/lab/images/Tensionms/css/ttms.css
@@ -42,7 +42,7 @@ input[type=button]
 #table
 {
 	padding:0px;
-	border-collapse: collapse;
+	/* border-collapse: collapse; */
     width: 20%;
 }
 #dia.th,td
