--- a/src/lab/css/style.css
+++ b/src/lab/css/style.css
@@ -339,6 +339,13 @@ nav#lab-article-navigation ul li a:focus, nav#experiment-article-navigation ul l
 	margin-left:50px;
 }
 
+
+.videoHeader{
+	width: 90%;
+	margin: 0 auto;
+	text-align: center;
+	background-color: #cddbfc;
+}
 aside 
 {
 	float:right;
